# agentic-labs

./: CLAUDE.md  Makefile  README.md  agent.py  functions.py  main.py  pyproject.toml  tools.py
.github/: copilot-instructions.md
.github/instructions/: agentic_labs.instructions.md  agentic_llm_labs.instructions.md  containerization.instructions.md  github_actions.instructions.md  lab.instructions.md  lab_code.instructions.md
.github/workflows/: build-weather-mcp-server.yml
labs/agent/: README.md  simple.py  weather.py
labs/agent-loop/: README.md  tools.py
labs/agent-sandbox/: server_provisioning.py
labs/langchain/: README.md  agent.py
labs/llm/: README.md  chat.py  input_tokens.py  respond.py  template.py  tokens.py
labs/llm-chat/: README.md  local.py
labs/local-agent/: README.md  tools.py  weather.py
labs/pydantic-ai/: README.md  agent.py  database.db  database.py  weather.py
labs/weather-agent/weather-mcp-server/: .dockerignore  Dockerfile  README.md  requirements.txt  weather_mcp_server.py
src/: offline.ps1  offline.sh
src/agentic_labs/: __init__.py  engine.py  logging.py
src/agentic_labs/cli/: __init__.py  check_setup.py  create_database.py  download_models.py  local_llm.py  main.py
src/agentic_llm_labs/: __init__.py
src/agentic_llm_labs/cli/: __init__.py  check_setup.py  download_models.py  main.py
