[project]
name = "agentic-llm-labs"
version = "0.1.0"
description = "Simple labs for experimenting with Agentic AI and LLMs."
authors = [
    {name = "Chris Lunsford", email = "cm@lunsford.io"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openai",
    "requests>=2.32.3",
    "transformers>=4.40.0",
    "torch>=2.0.0",
    "accelerate>=0.20.0",
    "huggingface-hub[cli]>=0.33.4",
    "click>=8.2.1",
    "tabulate>=0.9.0",
]


[dependency-groups]
dev = [
    "ipython>=9.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentic_llm_labs"]

[tool.ruff]
line-length = 88
indent-width = 4

# Target Python 3.13
target-version = "py313"

[tool.ruff.lint]
# B: flake8-bugbear
# I: flake8-import-order
# Q: flake8-quotes
extend-select = [ "B", "I", "Q" ]
