[project]
name = "agentic-labs"
version = "0.1.0"
description = "Simple labs for experimenting with LLMs and Agentic AI."
authors = [
    {name = "Chris Lunsford", email = "cm@lunsford.io"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=0.20.0",
    "click>=8.2.1",
    "huggingface-hub[cli]>=0.33.4",
    "openai",
    "requests>=2.32.3",
    "tabulate>=0.9.0",
    "torch>=2.0.0",
    "transformers>=4.40.0",
    "typer>=0.19.2",
]

[project.scripts]
agentic-labs = "agentic_llm_labs.cli.main:cli"


[dependency-groups]
dev = [
    "ipython>=9.5.0",
]

weather_mcp_server = [
    "mcp[cli]>=1.16.0",
    "pandas>=2.3.3",
    "pydantic>=2.11.7",
    "requests>=2.32.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentic_llm_labs"]

[tool.ruff]
line-length = 88
indent-width = 4

# Target Python 3.13
target-version = "py313"

[tool.ruff.lint]
# B: flake8-bugbear
# I: flake8-import-order
# Q: flake8-quotes
extend-select = [ "B", "I", "Q" ]
